--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EmüMaster PRO</title>
-    <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="floppa.png">
+  <meta charset="UTF-8">
+  <title>EmüMaster PRO</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div id="splash">
-        <img src="floppa.png" alt="Floppa" class="floppa">
-        <h1>EmüMaster PRO</h1>
-    </div>
-    <div id="app" style="display:none;">
-        <h2>Hoş Geldin!</h2>
-        <p>Favori konsolunu seç:</p>
-        <ul>
-            <li>GBA - <a href="roms/pong.gba" target="_blank">Pong</a></li>
-            <li>NES - <a href="roms/mario_homebrew.nes" target="_blank">Mario (homebrew)</a></li>
-            <li>SNES - <a href="roms/demo.sfc" target="_blank">Demo</a></li>
-            <li>PSP - <a href="roms/helloworld.ppk" target="_blank">Hello World</a></li>
-        </ul>
-    </div>
-    <script src="app.js"></script>
+<body onload="checkPassword()">
+  <div id="splash">
+    <h1>EmüMaster PRO</h1>
+    <p>Yükleniyor...</p>
+  </div>
+  <div id="app" style="display:none;">
+    <h2>Hoş geldin, <span id="username">Ziyaretçi</span>!</h2>
+    <input type="text" placeholder="Adını yaz" id="nameInput">
+    <button onclick="setName()">Kaydet</button>
+    <p>Oyunlar listesi yakında burada olacak!</p>
+  </div>
+<script src="app.js"></script>
+<script>
+function checkPassword() {
+    const pass = prompt("EmüMaster PRO'ya giriş şifresi:");
+    if (pass !== "floppa123") {
+        alert("Hatalı şifre!");
+        window.location.href = "https://google.com";
+    }
+}
+</script>
 </body>
 </html>
