--- a/index.html
+++ b/index.html
@@ -32,3 +32,5 @@
   </script>
 </body>
 </html>
+<input type="text" id="nameInput" placeholder="Adını gir" />
+<button onclick="startApp()">Devam</button>
